Fix overflow

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -131,6 +131,7 @@ li {
 
 section {
   padding: 70px 0;
+  overflow-x: hidden;
 }
 
 .sectionGamesBottom {
